# tree-magic-js

./: .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
examples/: text.json
native/: index.d.ts  index.js
src/: lib.rs
src/infer/: from_buffer.rs  from_path.rs  mod.rs
src/match/: from_buffer.rs  from_path.rs  mod.rs
src_ts/: index.ts
