
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "tree_magic_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.4.0"
napi-derive = "3.3.0"
tree_magic_mini = "3.2.0"

[target."cfg(target_family = \"windows\")".dependencies]
windows-sys = "0.61.2"

[target."cfg(target_family = \"unix\")".dependencies]
nix = "0.30.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[features]
default = ["napi10"]
napi10 = ["napi/napi10"]
